webapp/tasks/python/invalid-import/python-errors.txt
  File "main.py", line 1
    import pi from math
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: Did you mean to use 'from ... import ...' instead?
